# ZK-Access-Control-System

./: .gitignore  .gitmodules  README.md
age_check/: .gitignore  Verifier.sol  age_check.circom
frontend/: package-lock.json  package.json
frontend/src/app/: page.tsx
frontend/src/app/components/: App.tsx  account-selector.tsx  age-verification.tsx  client-app.tsx
frontend/src/app/hooks/: useSnarkJS.ts
frontend/src/app/providers/: web3-provider.tsx
rust_age_verification/: .gitignore  Cargo.toml
rust_age_verification/src/: main.rs
zk_verifier_contract/age_token/: Cargo.toml  lib.rs
zk_verifier_contract/zk_verifier/: .gitignore  Cargo.toml  lib.rs
